Implement proper fix for handling SpiceUsbDeviceManager in spice-session
The bug was found on spice-stats being killed, see Bug 1399838. That was fixed by commit 291f3e44 which introduced a regression in migration, see Bug 1558043.
As a solution to the regression, the fix for the original bug was reverted with 139f84da and avoiding the crash with a check which logs a CRITICAL message with 972a61db.
We should fix the problem around SpiceUsbDeviceManager's initialization in spice-session in order to run non UI tools like spice-stats without warnings/criticals.
Edited by Victor Toso