session: initialize USB device manager on session creation

Simple command line tools simply connect all channels, however
usbredir channels require that the manager was previously
initialized. Currently, running spicy-stats on a VM with usbredir
channels prints:

(lt-spicy-stats:25224): GSpice-CRITICAL **: 14:30:54.724: spice_usbredir_channel_up: assertion 'priv->host != NULL' failed

(lt-spicy-stats:25224): GSpice-CRITICAL **: 14:30:54.724: usbredir_handle_msg: assertion 'priv->host != NULL' failed

There is not strong reason not to initialize the USB device manager
when the session is created.

Notes:
- when usbredir isn't compiled in, those criticals aren't reached
- a previous attempt was to initialize the usb device manager during
  session instance init, however the manager shouldn't interact with a
  temporary migration session

Fixes:
https://gitlab.freedesktop.org/spice/spice-gtk/issues/67

Signed-off-by: Marc-André Lureau <marcandre.lureau@redhat.com>
Reviewed-by: Christophe Fergeau <cfergeau@redhat.com>